Revision history for {{$dist->name}}

{{$NEXT}}

1.100600  2010-03-01 08:19:06 America/New_York
          the File role provides a mode attribute; files are chmodded on write
          the mode attribute may not be world-writeable
          files gathered by AllFiles will have their on-disk mode &= 0755

1.100520  2010-02-21 15:53:39 America/New_York
          MakeMaker plugin correctly requires the right version of perl again

1.100160  2010-01-16 15:37:29 America/New_York
          require File::Install::ShareDir if needed for Makefile.PL share

1.100130  2010-01-13 08:18:29 America/New_York
          the args used in generated Build.PL or Makefile.PL are now mostly
          generated by Data::Dumper instead of interpolation and quotemeta

1.100120  2010-01-12 18:40:00 America/New_York
          add 'dzil run' and BuildRunner (Jérôme Quelin)
          improve behavior of 'dzil clean' with backup files (Jérôme Quelin)
          dzil takes an -I option (Jérôme Quelin)
          InstallDirs can now provide File::ShareDir-style installs (rjbs,
            Jérôme Quelin, nperez)
          Role::File now requires a content method (rjbs)
          eliminate stupid noise spewed during 'dzil new' (rjbs)

1.093400  2009-12-06 13:56:09 America/New_York
          declare dependency on PPI introduced by 1.093370

1.093371  2009-12-03 18:45:11 America/New_York

1.093370  2009-12-03 18:42:30 America/New_York
          PruneFiles now works... for real; only "filenames" works

1.093370  2009-12-03 18:17:16 America/New_York
          PruneFiles now works; the documented args for PruneFiles were wrong
          PkgVersion now uses PPI to insert $VERSION; avoids many false inserts
          Fix regression where failing tests still cleaned up the build dir.
            ( Kent Fredric )

1.093290  2009-11-25 14:45:45 America/New_York
          switch from String::Format to String::Formatter

1.093280  2009-11-24 11:24:52 America/New_York
          include META.yml again for now