@@ -43,8 +43,10 @@ File::Temp        = 0
 File::chdir       = 0
 File::HomeDir     = 0
 List::MoreUtils   = 0
+Log::Dispatchouli = 1.004 ; multiple args to ->log
 Moose             = 0.92 ; role composition bugfixes
 Moose::Autobox    = 0.09 ; flattten
+MooseX::Singleton = 0.22 ; ->instance / ->initialize
 Path::Class       = 0
 Perl::Version     = 0
 Pod::Eventual     = 0.091480 ; better nonpod/blank events
